tests/sem/error/struct_shadow.c
struct foo {
  int bar;
  int bar;
};